--- a/abcd.html
+++ b/abcd.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "jquery.museresponsive.js", "abcd.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "jquery.museresponsive.js", "abcd.css"], "outOfDate":[]};
 </script>
   
   <title>ABCD</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
-  <link rel="stylesheet" type="text/css" href="css/abcd.css?crc=403608627" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4200611759"/>
+  <link rel="stylesheet" type="text/css" href="css/abcd.css?crc=153799638" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=4200611759"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_abcd.css?crc=241971139" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_abcd.css?crc=530624553" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/6TEJ10Ul9IWY5N6SsjbLtRcTHgM_4GG-UX0NTRXK4_bfelGgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFrzMsMMeMS6MKGHfFhzMsMMeMw6MKGHfF7zMsMMeMt6MqGIQWmDZZMglNEQ369.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/6KuR6jgsd9t9ILXwoOjMevWOJ1aL7j0dgZdAoNZexvXfelGgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFrzMsMMeMS6MKGHfFhzMsMMeMw6MKGHfF7zMsMMeMt6MqGIQWmDZZMgn4k9369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -85,7 +85,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- /m_editable -->
      <div class="colelem" id="u6188"><!-- simple frame --></div>
      <!-- m_editable region-id="editable-static-tag-U27168-BP_infinity" template="abcd.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix colelem" id="u27168-60" data-muse-uid="U27168" data-muse-type="txt_frame"><!-- content -->
+     <div class="clearfix colelem" id="u27168-58" data-muse-uid="U27168" data-muse-type="txt_frame"><!-- content -->
       <p id="u27168-2">ASSUME GOD WILL USE YOU</p>
       <p id="u27168-4">The assumption is that in every circumstance and every opportunity God will use you in some way keeps your eyes focused not on you but on what God can do through you. This mindset takes you out of being a bystander and puts you in the playing field. Imagine that you walk into a room and you assume God will use you, you will look around the room and pray what how God? There is no time to let fear grab you, no chance for selfishness to consume you and no chance for doubt to take hold. While we might not always get it right what if this is our first thought in every conversation, in every activity and in every environment.</p>
       <p id="u27168-5">&nbsp;</p>
@@ -117,12 +117,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p id="u27168-52">Imagine you come to faith: you assume that God wants to use you, you believe that God is bigger than your short comings and you are cultivating your relationship with God there is no reason why you should not be investing in other people straight away. As you do and you teach these elements to others and they intern teach it to others you get a multiplying effect that God intended.</p>
       <p id="u27168-53">&nbsp;</p>
       <p id="u27168-56"><a class="nonblock" href="https://www.bible.com/bible/116/mat.28">Jesus came and told his disciples, “I have been given all authority in heaven and on earth. Therefore, go and make disciples of all the nations, baptizing them in the name of the Father and the Son and the Holy Spirit. Teach these new disciples to obey all the commands I have given you. And be sure of this: I am with you always, even to the end of the age.” Matthew 28:18-21 NLT</a></p>
-      <p id="u27168-57">&nbsp;</p>
-      <p id="u27168-58">&nbsp;</p>
      </div>
      <!-- /m_editable -->
     </div>
-    <div class="verticalspacer" data-offset-top="1296" data-content-above-spacer="1296" data-content-below-spacer="81"></div>
+    <div class="verticalspacer" data-offset-top="1262" data-content-above-spacer="1262" data-content-below-spacer="81"></div>
     <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html" data-href="page:U782" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
@@ -149,7 +147,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu18792-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="2401" data-content-above-spacer="2401" data-content-below-spacer="81"></div>
+    <div class="verticalspacer" data-offset-top="2367" data-content-above-spacer="2367" data-content-below-spacer="81"></div>
     <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
    </div>
   </div>
