--- a/resources.html
+++ b/resources.html
@@ -11,17 +11,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "resources.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "jquery.watch.js", "require.js", "resources.css"], "outOfDate":[]};
 </script>
   
   <title>Resources</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=517215909"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4108129033"/>
-  <link rel="stylesheet" type="text/css" href="css/resources.css?crc=3913410059" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=4200611759"/>
+  <link rel="stylesheet" type="text/css" href="css/resources.css?crc=3841208593" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=4200611759" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -32,7 +32,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/9C72ag0gkkBdVTx1pJJnuKKNtTOMeNDtomExRi71KX6fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMguFEQ369.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/VL2oP3ESVl-RCjHXrJg14eQ2Stqnvl9LdKFARUZj1FSfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgCZk9369.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -75,12 +75,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <!-- m_editable region-id="editable-static-tag-U31920-BP_infinity" template="resources.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="clearfix grpelem" id="u31920-6" data-muse-uid="U31920" data-muse-type="txt_frame"><!-- content -->
-    <p>i am statements</p>
-    <p>sinners prayer</p>
-   </div>
-   <!-- /m_editable -->
    <div class="clearfix grpelem" id="pu31675-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U31675-BP_infinity" template="resources.html" data-type="html" data-ice-options="disableImageResize,link" -->
     <div class="Title clearfix colelem" id="u31675-4" data-muse-uid="U31675" data-muse-type="txt_frame"><!-- content -->
@@ -88,8 +82,17 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <!-- /m_editable -->
     <div class="colelem" id="u6188"><!-- simple frame --></div>
+    <!-- m_editable region-id="editable-static-tag-U37306-BP_infinity" template="resources.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rounded-corners clip_frame colelem" id="u37306" href="i-am-statements.html" data-href="page:U37586" data-muse-uid="U37306"><!-- svg --><img class="svg" id="u37304" src="images/pasted-svg-900x450.svg?crc=192407454" alt="" data-mu-svgfallback="images/pasted%20svg%20900x450_poster_.png?crc=160067301" data-image-width="900" data-image-height="450"/></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U37644-BP_infinity" template="resources.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rounded-corners clip_frame colelem" id="u37644" href="jesus-prayer.html" data-href="page:U37426" data-muse-uid="U37644"><!-- svg --><img class="svg" id="u37642" src="images/pasted-svg-900x4502.svg?crc=514570476" alt="" data-mu-svgfallback="images/pasted%20svg%20900x450_poster_2.png?crc=277082684" data-image-width="900" data-image-height="450"/></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U38072-BP_infinity" template="resources.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rounded-corners clip_frame colelem" id="u38072" href="http://readscripture.org/" data-muse-uid="U38072"><!-- svg --><img class="svg" id="u38070" src="images/pasted-svg-900x4503.svg?crc=3994672221" alt="" data-mu-svgfallback="images/pasted%20svg%20900x450_poster_3.png?crc=391416729" data-image-width="900" data-image-height="450"/></a>
+    <!-- /m_editable -->
    </div>
-   <div class="verticalspacer" data-offset-top="337" data-content-above-spacer="337" data-content-below-spacer="81"></div>
+   <div class="verticalspacer" data-offset-top="1456" data-content-above-spacer="1455" data-content-below-spacer="80"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
   </div>
   <!-- Other scripts -->
